# case-fullstack-anka

./: README.md
backend/: app.db  pyproject.toml  replit.md
backend/app/: main.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  redis_client.py
backend/app/models/: __init__.py  allocation.py  asset.py  client.py  transaction.py  user.py
backend/app/routers/: auth.py  health.py  users.py
backend/app/schemas/: user.py
backend/tests/: test_users.py
frontend/: design_guidelines.md  package-lock.json  package.json  vite.config.ts
frontend/client/: index.html
frontend/client/src/: App.tsx  index.css
frontend/client/src/components/dashboard/: SummaryCard.tsx
frontend/client/src/components/data/: DataTable.tsx
frontend/client/src/components/examples/: ClientFormExample.tsx  DataTableExample.tsx  LoginFormExample.tsx  SummaryCardExample.tsx
frontend/client/src/components/forms/: ClientForm.tsx  LoginForm.tsx
frontend/client/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/client/src/contexts/: AuthContext.tsx
frontend/client/src/data/: mockData.ts
frontend/client/src/hooks/: useProtectedRoute.tsx
frontend/client/src/pages/: Assets.tsx  Clients.tsx  Comissoes.tsx  Custodia.tsx  Dashboard.tsx  Login.tsx  Movements.tsx  NetNewMoney.tsx  Receitas.tsx
frontend/client/src/utils/: export.ts
frontend/server/: routes.ts
